<resources>
    <string name="app_name">eVMS</string>
    <string name="login_as_admin">Login as Admin</string>
    <string name="login_as_manager">Login as Manager</string>
    <string name="login_as_employee">Login as Employee</string>
    <string name="login_as_customer">Login as Customer</string>
    <string name="new_here_register_as_customer">New Here? Register as Customer!</string>
    <string name="enter_password">Enter Password:</string>
    <string name="enter_id">Enter Id:</string>
    <string name="login">LogIn</string>
    <string name="enter_manager_id">Enter Manager Id:</string>
    <string name="enter_employee_id">Enter Employee ID:</string>
    <string name="enter_employee_name">Enter Employee Name:</string>
    <string name="enter_email">Enter Email:</string>
    <string name="enter_phone_number">Enter Phone Number:</string>
    <string name="enter_salary">Enter Salary:</string>
    <string name="add">Add</string>
    <string name="enter_name">Enter Name:</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="appoint_as_manager">Appoint as Manager</string>
    <string name="type_label">Type</string>
    <string name="type_hint">Enter type</string>
    <string name="price_label">Price</string>
    <string name="price_hint">Enter Price</string>
    <string name="add_service_button_label">Add Service</string>
    <string name="descriptionField">Add Description for the Service</string>
    <string name="view_vehicles">View Vehicles</string>
</resources>
