<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginCustomer">

    <!-- Email Label -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="27dp"
        android:layout_marginTop="220dp" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/editTextCustomerEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="27dp" />

    <!-- Password Label -->
    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        app:layout_constraintStart_toStartOf="@+id/editTextCustomerEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextCustomerEmailAddress"
        android:layout_marginTop="16dp" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/editTextCustomerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintEnd_toEndOf="@+id/editTextCustomerEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        android:layout_marginTop="8dp" />

    <!-- Login Button -->
    <Button
        android:id="@+id/btn_customer_LoggedIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCustomerPassword"
        android:layout_marginTop="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
