<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    tools:context=".managerAddEmployee">

    <!-- Heading -->
    <TextView
        android:id="@+id/text_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Employee"
        android:textColor="@color/text_secondary"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="38dp"
        android:paddingTop="1dp"
        android:paddingBottom="8dp"/>

    <!-- Back Button -->
    <Button
        android:id="@+id/backButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginLeft="24dp"
        android:padding="1dp"
        android:gravity="center"
        android:text="&lt;"
        android:textSize="24sp"
        android:textColor="@color/text_primary"
        android:backgroundTint="@color/cardview_light_background"
        android:onClick="onBackButtonClick"
        app:layout_constraintTop_toTopOf="@id/text_heading"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- CardView -->
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/card_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_heading">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- EditText and TextView elements -->

            <!-- Employee Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_employee_name"
                style="@style/RoundedTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_employee_name"
                    android:textColor="@color/text_secondary" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_email"
                style="@style/RoundedTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_employee_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/text_secondary" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Phone Number -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_phone"
                style="@style/RoundedTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_phone_number"
                    android:inputType="phone"
                    android:textColor="@color/text_secondary" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Salary -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_salary"
                style="@style/RoundedTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_salary"
                    android:inputType="number"
                    android:textColor="@color/text_secondary" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Manager ID -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_manager_id"
                style="@style/RoundedTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_salary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextManagerId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_manager_id"
                    android:inputType="text"
                    android:textColor="@color/text_secondary" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Add Button -->
            <!-- Add Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_AddEmployee"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:text="@string/add"
                android:textColor="@color/colorOnPrimary"
                android:backgroundTint="@color/button_primary"
                android:padding="16dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="35dp"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_manager_id" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>